# GeneticVision

./: .gitignore  AppConfig.cpp  AppConfig.h  CMakeLists.txt  GeneticVisionApp.cpp  GeneticVisionApp.h  README.md  compile.sh  main.cpp  pbs_compile.sh  pbs_easy_square_job_script.sh
data/blur/: blur-gv-config.json
data/easy-square/: easy-square-config.json  gv-config.json  image-set.csv  pbs_easy_square_job_script.sh
data/mammogram/: gv-config.json
examples/blur/: gv-config.json
examples/easy-square/: gv-config-list-images.json  gv-config.json  pbs_easy_square_job_script.sh
examples/faces/: gv-config.json
examples/mammogram/: pbs_mammo_job_script.sh
model/: GroundTruth.cpp  GroundTruth.h  ImageCollection.cpp  ImageCollection.h  ImagePair.cpp  ImagePair.h  Model.cpp  Model.h  OpenCVFilters.cpp  OpenCVFilters.h
model/simulation/: GpSimulation.cpp  GpSimulation.h  VisionFitness.cpp  VisionFitness.h
model/simulation/functions/: ImageBlend.cpp  ImageBrightness.cpp  ImageBrightness.h  ImageCannyEdge.cpp  ImageCannyEdge.h  ImageErode.cpp  ImageGaussianBlur.cpp  ImageGaussianBlur.h  ImageInvert.cpp  ImageSobel.cpp  ImageSobel.h  ImageThreshold.cpp  Mean.cpp  OpenCVFunction.cpp  OpenCVFunction.h  PlusDouble.cpp  PlusDouble.h  RandDouble.cpp  ReturnDouble.cpp  ReturnDouble.h  ReturnImage.cpp  ReturnImage.h  ReturnKernel.cpp  ReturnKernel.h  ReturnValue.cpp  ReturnValue.h  StdDev.cpp  TTerminal.cpp  TTerminal.h  Threshold.cpp  Threshold.h
model/simulation/terminals/: ImageInput.cpp  ImageInput.h  RandDouble.cpp  RandDouble.h
model/simulation/types/: ReturnImage.h
output/: run_log.txt
pbs/: pbs_compile.sh  pbs_easy_square_job_script.sh  pbs_run_sample.sh
rmitgp/: ADFProgramGenerator.cpp  ADFProgramGenerator.h  ADFunction.h  CoEvolutionFitness.cpp  CoEvolutionFitness.h  CoEvolutionPopulation.h  ConstantParsimony.cpp  ConstantParsimony.h  CovariantTarpeian.h  Crossover.cpp  DynamicDepthLimit.h  DynamicParsimony.cpp  DynamicParsimony.h  EMOPopulation.cpp  EMOPopulation.h  EMOTournamentSelection.cpp  EMOTournamentSelection.h  Fitness.cpp  Fitness.h  Function.cpp  GPConfig.cpp  GPConfig.h  GeneticProgram.h  GridPopulation.cpp  GridPopulation.h  LimitParsimony.cpp  LimitParsimony.h  LinearParsimony.cpp  LinearParsimony.h  Mutation.cpp  Mutation.h  NSGA2.cpp  NSGA2.h  NodeSet.cpp  NodeSet.h  NodeVector.h  Parsimony.cpp  Population.cpp  Population.h  ProgramGenerator.cpp  (+15 more)
src/: AppConfig.cpp  AppConfig.h  GeneticVisionApp.cpp  GeneticVisionApp.h  main.cpp
src/model/: ImagePair.cpp  ImagePair.h  Model.h
src/model/simulation/: GpSimulation.h  GvPopulation.cpp  GvPopulation.h  GvSimulation.cpp  GvSimulation.h  ImagePairCollection.cpp  ImagePairCollection.h  ProgramResult.cpp  ProgramResult.h  ProgramStats.cpp  ProgramStats.h  RunResult.cpp  RunResult.h  VisionFitness.cpp  VisionFitness.h
src/model/simulation/functions/: CvMatrixAdd.cpp  CvMatrixAdd.h  CvMatrixDivideScalar.cpp  CvMatrixDivideScalar.h  CvMatrixMultiplyScalar.cpp  CvMatrixMultiplyScalar.h  CvMatrixSubtract.cpp  CvMatrixSubtract.h  DivideDouble.cpp  DivideDouble.h  ImageBlend.h  ImageCannyEdge.cpp  ImageErode.cpp  ImageErode.h  ImageFilter2D.cpp  ImageFilter2D.h  ImageGaussianBlur.cpp  ImageGaussianBlur.h  ImageInvert.cpp  ImageInvert.h  ImageSobel.cpp  ImageThreshold.h  Mean.cpp  Mean.h  MinusDouble.cpp  MinusDouble.h  MultDouble.cpp  MultDouble.h  PlusDouble.cpp  StdDev.cpp  StdDev.h  TFunction.h
src/model/simulation/terminals/: RandDouble.cpp
src/model/simulation/types/: ReturnDouble.cpp  ReturnImage.cpp  ReturnImage.h
src/rmitgp/: ADFRoot.cpp  ADFRoot.h  ADFunction.cpp  CoEvolutionPopulation.cpp  CovariantTarpeian.cpp  Crossover.h  DynamicDepthLimit.cpp  Function.h  GeneticProgram.cpp  Makefile  Makefile_MPI  Node.cpp  Node.h  Parsimony.h  Population.cpp  Random.h  SinParsimony.cpp  Terminal.h  Util.cpp  rand.h  tags
src/util/: Stopwatch.cpp
src/view/: HighGuiView.cpp  HighGuiView.h  ImageWriter.cpp  ImageWriter.h  OpenCVWindow.cpp  StdOutView.cpp  StdOutView.h  ViewController.cpp  ViewController.h
util/: Stopwatch.h
util/csv/: CSVParser.cpp  CSVParser.h
view/: OpenCVWindow.cpp  OpenCVWindow.h  ViewController.h
